# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "probes-policy"
version = "0.2.0"
authors = [
  "Nicolas Lamirault <nicolas.lamirault@gmail.com>",
  "Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>",
]
edition = "2024"

documentation = "https://github.com/kubewarden/probes-policy"
keywords = ["kubewarden", "policy"]
repository = "https://github.com/kubewarden/probes-policy"
homepage = "https://github.com/kubewarden/probes-policy"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kubewarden-policy-sdk = "0.15"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
