[package]
name = "probes-policy"
version = "1.0.1"
authors = [
  "Nicolas Lamirault <nicolas.lamirault@gmail.com>",
  "Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>",
]
edition = "2024"

documentation = "https://github.com/kubewarden/probes-policy"
keywords = ["kubewarden", "policy"]
repository = "https://github.com/kubewarden/probes-policy"
homepage = "https://github.com/kubewarden/probes-policy"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kubewarden-policy-sdk = "0.15"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.7"
thiserror = "2.0.17"

[dev-dependencies]
rstest = "0.26"
